--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
- SpeechRecognition==3.10.0
+SpeechRecognition==3.10.0
 gTTS==2.3.2
 pydub==0.25.1
 Flask==2.3.3
 gspread==5.11.0
 oauth2client==4.1.3
 Werkzeug==2.3.7
+twilio==8.10.0
