--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-SpeechRecognition==3.10.0
-gTTS==2.3.2
-pydub==0.25.1
 Flask==2.3.3
-gspread==5.11.0
-oauth2client==4.1.3
-Werkzeug==2.3.7
-twilio==8.10.0
+requests==2.31.0
+gunicorn==21.2.0
